# battleship-tui

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  compose.yaml  pyproject.toml  requirements-server.txt  tox.ini
.github/workflows/: build-server.yml  ci.yml  release.yml
battleship/: __init__.py  __main__.py  api.py  app.py  client.py  domain.py  errors.py  game.py  logger.py  server.py  styles.css
battleship/cli/: __init__.py  __main__.py  account.py  app.py  config.py  console.py  di.py  logging.py  play.py  settings.py
battleship/client/: __init__.py  auth.py  client.py  compat.py  credentials.py  realtime.py  subscriptions.py  websocket.py
battleship/engine/: __init__.py  ai.py  api.py  domain.py  errors.py  roster.py  session.py
battleship/server/: __init__.py  app.py  auth.py  bus.py  clients.py  config.py  connections.py  context.py  di.py  game.py  handlers.py  metrics.py  players.py  pubsub.py  realtime.py  routes.py  schemas.py  services.py  sessions.py  statistics.py  websocket.py
battleship/server/repositories/: __init__.py  channel.py  clients.py  observable.py  sessions.py  subscriptions.py
battleship/shared/: compat.py  events.py  models.py  sessions.py
battleship/simulator/: main.py  styles.tcss
battleship/tui/: __init__.py  app.py  config.py  di.py  format.py  i18n.py  resources.py  settings.py  strategies.py  styles.tcss
battleship/tui/resources/: create_game_help.md  lobby_help.md  multiplayer_help.md  settings_help.md  singleplayer_help.md  statistics_help.md
battleship/tui/screens/: __init__.py  create_game.py  game.py  join_game.py  lobby.py  main_menu.py  multiplayer.py  settings.py  singleplayer.py  statistics.py
battleship/tui/widgets/: __init__.py  announcement.py  battle_log.py  board.py  fleet.py  footer.py  lobby_header.py  modals.py  new_game.py
tests/: __init__.py  conftest.py  test_ai.py  test_domain.py  test_pubsub.py  test_tui.py
tests/__snapshots__/: test_tui.ambr
tests/domain/: test_board.py  test_cell.py  test_coordinate.py  test_game.py  test_player.py  test_ship.py
tools/: load.py
tools/load_testing/: create_users.py  delete_users.py  load.py
