[tool.poetry]
name = "battleship"
version = "0.1.0"
description = "Battleship TUI is an implementation of the popular paper-and-pen Battleship game for your terminal."
authors = ["Roman Vlasenko <klavionik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0.0"
loguru = "^0.7.0"
pyee = "^11.0.0"
textual = { version = "^0.41.0", optional = true }
blacksheep = { version ="^1.2.18", optional = true }
uvicorn = { version = "^0.23.2", optional = true }
httpx = "^0.25.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
pyjwt = {extras = ["crypto"], version = "^2.8.0", optional = true}
uvloop = { version = "^0.19.0", optional = true }
email-validator = "^2.1.0.post1"
auth0-python = { version = "^4.5.0", optional = true }
typer = { version = "^0.9.0", optional = true }
xdg-base-dirs = "^6.0.1"
inject = "^5.1.0"
redis = { version = "^5.0.1", optional = true }


[tool.poetry.extras]
server = ["blacksheep", "uvicorn", "auth0-python", "pyjwt", "uvloop", "redis"]
client = ["textual", "typer"]

[tool.poetry.scripts]
battleship = "battleship.cli:app"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
coverage = "^7.3.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
textual-dev = "^1.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
