[tool.poetry]
name = "battleship-tui"
version = "0.18.0"
description = "Battleship TUI is an implementation of the popular paper-and-pen Battleship game for your terminal."
authors = ["Roman Vlasenko <klavionik@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Klavionik/battleship-tui"
license = "GPL-2.0-or-later"
keywords = ["battleship", "game", "tui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Topic :: Games/Entertainment :: Board Games",
  "Typing :: Typed",
]
packages = [
  { include = "battleship" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
websockets = "^12.0.0"
loguru = "^0.7.0"
pyee = "^11.0.0"
blacksheep = { version ="^2.0.7", optional = true }
uvicorn = { version = "^0.30.0", optional = true }
httpx = "^0.27.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0", optional = true}
uvloop = { version = "^0.19.0", optional = true }
email-validator = "^2.2.0"
auth0-python = { version = "^4.5.0", optional = true }
typer = { version = "^0.12.0", optional = true }
xdg-base-dirs = "^6.0.1"
inject = { version = "^5.2.0", optional = true }
redis = { version = "^5.0.1", optional = true }
textual = "0.71.0"
textual-dev = { version = "^1.5.0", optional = true }
async-timeout = { version = "^4.0.3", markers = "python_version < '3.11'" }
backports-strenum = { version = "^1.2.8", markers = "python_version < '3.11'" }
sentry-sdk = "^2.6.0"
aioprometheus = {version = "^23.3.0", optional = true}
copykitten = { version = "^1.2.0", optional = true }
tenacity = { version = "^8.4.1", optional = true }
pymitter = "^0.5.1"
sentry-offline-transport = { version = "^1.0.0", optional = true }


[tool.poetry.extras]
server = ["blacksheep", "uvicorn", "auth0-python", "pyjwt", "uvloop", "redis", "aioprometheus"]
client = ["textual", "typer", "inject", "copykitten", "tenacity", "sentry-offline-transport"]
dev = ["textual-dev"]

[tool.poetry.scripts]
battleship = "battleship.cli:run"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["snap: Textual snapshot tests"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
coverage = "^7.3.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
pytest = "^7.4.2"
pytest-asyncio = "^0.23.2"
pytest-textual-snapshot = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
